--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,135 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
 body {
-    height: 100vh;
-    width: 100%;
-    background-color: #424242;
-    display: flex;
-    flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: #424242;
+  display: flex;
+  flex-direction: column;
 }
 
-
 nav {
-    width: 100% ;
-    height: 50px;
-    display: flex;
-    background-color: #3A3939;
-    align-items: center;
-    border: none;
+  max-width: 100%;
+  height: 100px;
+  background-color: #3a3939;
+  border: none;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  padding: 10px 25px;
+}
+
+.icon-ground {
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.icon-item {
+  height: 100%;
+  min-width: 20px;
+  max-width: 120px;
+  position: relative;
+  overflow: hidden;
+  margin-left: 3px;
+  cursor: pointer;
+  z-index: 0;
+}
+
+.icon-item:first-child {
+  margin-left: 0;
+}
+
+.icon-item > img.main-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.7;
+  z-index: 0;
+}
+
+.icon-item img.circle-imge {
+  position: absolute;
+  width: calc(100% - 45px);
+  height: calc(100% - 15px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  border: 2px solid #90ff72;
+  object-fit: cover;
+  z-index: 999;
 }
