--- a/style/style.css
+++ b/style/style.css
@@ -88,8 +88,7 @@ nav {
   border: none;
   display: flex;
   align-items: center;
-  overflow: hidden;
-  padding: 10px 25px;
+  padding: 0px 80px;
 }
 
 .icon-ground {
@@ -103,10 +102,40 @@ nav {
   min-width: 20px;
   max-width: 120px;
   position: relative;
-  overflow: hidden;
   margin-left: 3px;
   cursor: pointer;
   z-index: 0;
+}
+
+.icon-item:before {
+  content: "beer fah fon mai fag dsa das dsadsa  ";
+  position: absolute;
+  opacity: 0.5;
+  visibility: hidden;
+  height: auto;
+  width: max-content;
+  transform: scale(0.5);
+  border: 0;
+  padding: 0 5px;
+  font-size: 14px;
+  background-color: #fff;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0) scale(0.96);
+  z-index: 9999;
+  transition: transform 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.icon-item:hover img.circle-imge {
+  border-color: #90ff72;
+}
+.icon-item:hover:before {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, 150%) scale(1);
+  transition: opacity 100ms cubic-bezier(0.165, 0.84, 0.44, 1),
+    visibility 100ms ease,
+    transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .icon-item:first-child {
@@ -117,19 +146,20 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.7;
+  opacity: 0.5;
   z-index: 0;
 }
 
 .icon-item img.circle-imge {
   position: absolute;
-  width: calc(100% - 45px);
-  height: calc(100% - 15px);
+  width: calc(100% - 40px);
+  height: calc(100% - 30px);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  border: 2px solid #90ff72;
   object-fit: cover;
   z-index: 999;
+  transition: all 200ms ease;
+  border: 1px solid black;
 }
