--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@ nav {
   border: none;
   display: flex;
   align-items: center;
-  padding: 0px 80px;
+  padding: 10px 80px;
 }
 
 .icon-ground {
@@ -152,8 +152,8 @@ nav {
 
 .icon-item img.circle-imge {
   position: absolute;
-  width: calc(100% - 40px);
-  height: calc(100% - 30px);
+  width: calc(100% - 40%);
+  height: calc(100% - 20%);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -161,5 +161,5 @@ nav {
   object-fit: cover;
   z-index: 999;
   transition: all 200ms ease;
-  border: 1px solid black;
+  border: 2px solid black;
 }
