--- a/style/style.css
+++ b/style/style.css
@@ -72,23 +72,30 @@ select {
     scroll-behavior: auto !important;
   }
 }
+:root {
+  --color-primary-darkdeep: #3a3939;
+  --color-primary-lightdark: #424242;
+  --font-color-while: #dbdbdb;
+}
 
 body {
   height: 100vh;
   width: 100%;
-  background-color: #424242;
+  background-color: var(--color-primary-lightdark);
   display: flex;
   flex-direction: column;
+
 }
 
 nav {
   max-width: 100%;
   height: 100px;
-  background-color: #3a3939;
+  background-color: var(--color-primary-darkdeep);
   border: none;
   display: flex;
   align-items: center;
   padding: 10px 80px;
+  position: sticky;
 }
 
 .icon-ground {
@@ -162,4 +169,95 @@ nav {
   z-index: 999;
   transition: all 200ms ease;
   border: 2px solid black;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+  overflow: visible;
+}
+
+.group-video {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  grid-auto-rows: 400px;
+  gap: 30px;
+  
+  overflow: visible;
+  padding-bottom: 25px;
+}
+
+.video-card {
+  display: flex;
+  background-color: transparent;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  border: none;
+  background-color: var(--color-primary-darkdeep);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  user-select: none;
+  transition: all 0.1s ease;
+  border-radius: 5px;
+}
+
+.video-card:hover {
+  transform: translateY(-5px);
+}
+
+
+.video-card:active {
+  transform: translateY(5px);
+}
+
+
+.video {
+  width: 100%;
+  height: 60%;
+  background-color: #a5a3a3b0;
+  border-radius: 5px
+}
+
+.video img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.video-titel {
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: var(--font-color-while);
+  font-size: 20px;
+  height: auto;
+  overflow: auto;
+  font-weight: 500;
+}
+
+.box-view-time {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  flex-grow: 1;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.time,
+.view {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+:is(.time, .view) p {
+  color: var(--font-color-while);
+  font-size: 22px;
 }
