--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,6 @@ body {
   background-color: var(--color-primary-lightdark);
   display: flex;
   flex-direction: column;
-
 }
 
 nav {
@@ -108,8 +107,8 @@ nav {
 
 .icon-item {
   height: 100%;
-  min-width: 20px;
-  max-width: 120px;
+  min-width: 90px;
+  max-width: 165px;
   position: relative;
   margin-left: 3px;
   cursor: pointer;
@@ -161,8 +160,8 @@ nav {
 
 .icon-item img.circle-imge {
   position: absolute;
-  width: calc(100% - 50%);
-  height: calc(100% - 25%);
+  width: 50%;
+  height: 85%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -177,7 +176,6 @@ main {
   width: 100%;
   height: 100%;
   padding-top: 40px;
-  overflow: visible;
   z-index: 1;
 }
 
@@ -188,11 +186,9 @@ main {
   height: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  grid-auto-rows: 400px;
+  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+  grid-auto-rows: minmax(22rem,364px);
   gap: 30px;
-  overflow: visible;
 }
 
 .video-card {
@@ -207,25 +203,13 @@ main {
   user-select: none;
   transition: all 0.1s ease;
   border-radius: 5px;
-  
 }
-
-.video-card:hover {
-  transform: translateY(-3px);
-}
-
-
-
-.video-card:active {
-  transform: translateY(3px);
-}
-
 
 .video {
   width: 100%;
   height: 60%;
   background-color: #a5a3a3b0;
-  border-radius: 5px
+  border-radius: 5px;
 }
 
 .video img {
