--- a/style/style.css
+++ b/style/style.css
@@ -85,34 +85,35 @@ body {
   background-color: var(--color-primary-lightdark);
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 nav {
   width: 100%;
-  height: 80px;
+  height: 120px;
   background-color: var(--color-primary-dark);
   border: none;
   display: flex;
   align-items: center;
-  padding: 10px 80px;
-  position: fixed;
-  z-index: 999;
+  padding: 10px 25px;
+  flex-shrink: 0;
 }
 
 .icon-ground {
   height: 100%;
   display: flex;
   justify-content: flex-start;
+  z-index: 1;
 }
 
 .icon-item {
   height: 100%;
-  min-width: 90px;
-  max-width: 165px;
+  min-width: 33%;
+  max-width: 120px;
   position: relative;
   margin-left: 3px;
   cursor: pointer;
-  z-index: 0;
+  z-index: 2;
 }
 
 .icon-item:before {
@@ -161,7 +162,7 @@ nav {
 .icon-item img.circle-imge {
   position: absolute;
   width: 50%;
-  height: 85%;
+  height: 70%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -175,19 +176,18 @@ nav {
 main {
   width: 100%;
   height: 100%;
-  padding-top: 40px;
+  padding-top: 20px;
   z-index: 1;
 }
 
 .group-video {
   width: 80%;
-  padding-top: 40px;
   padding-bottom: 55px;
   height: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
-  grid-auto-rows: minmax(22rem,364px);
+  grid-auto-rows: minmax(22rem, 364px);
   gap: 30px;
 }
 
@@ -203,6 +203,10 @@ main {
   user-select: none;
   transition: all 0.1s ease;
   border-radius: 5px;
+}
+
+.video-card:hover .video-titel {
+  color: #fff;
 }
 
 .video {
@@ -226,7 +230,6 @@ main {
   color: var(--font-color-while);
   font-size: 20px;
   height: auto;
-  overflow: auto;
   font-weight: 500;
 }
 
