--- a/style/style.css
+++ b/style/style.css
@@ -85,18 +85,16 @@ body {
   background-color: var(--color-primary-lightdark);
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 nav {
-  width: 100%;
+  width: unset;
   height: 120px;
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary-darkdeep);
   border: none;
   display: flex;
   align-items: center;
-  padding: 10px 25px;
-  flex-shrink: 0;
+  padding: 10px 4rem;
 }
 
 .icon-ground {
@@ -111,9 +109,13 @@ nav {
   min-width: 33%;
   max-width: 120px;
   position: relative;
-  margin-left: 3px;
+  margin-left: 5px;
   cursor: pointer;
   z-index: 2;
+}
+
+.icon-item:first-child {
+  margin-left: 0;
 }
 
 .icon-item:before {
@@ -161,7 +163,7 @@ nav {
 
 .icon-item img.circle-imge {
   position: absolute;
-  width: 50%;
+  width: 60%;
   height: 70%;
   top: 50%;
   left: 50%;
@@ -175,19 +177,20 @@ nav {
 
 main {
   width: 100%;
-  height: 100%;
-  padding-top: 20px;
+  height: auto;
+  padding-top: 55px;
+  padding-bottom: 25px;
   z-index: 1;
+  overflow-wrap: normal;
 }
 
 .group-video {
   width: 80%;
-  padding-bottom: 55px;
   height: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
-  grid-auto-rows: minmax(22rem, 364px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(22rem, 348px);
   gap: 30px;
 }
 
@@ -203,6 +206,7 @@ main {
   user-select: none;
   transition: all 0.1s ease;
   border-radius: 5px;
+  padding-bottom: 10px;
 }
 
 .video-card:hover .video-titel {
@@ -228,9 +232,14 @@ main {
   padding-left: 5px;
   padding-right: 5px;
   color: var(--font-color-while);
-  font-size: 20px;
+  font-size: 18px;
+  text-align: center;
   height: auto;
   font-weight: 500;
+  margin-bottom: 10px;
+  text-decoration:underline;
+  text-decoration-color: #424242;
+  line-height: 1.8em;   /*? 24px  */
 }
 
 .box-view-time {
@@ -252,4 +261,33 @@ main {
 :is(.time, .view) p {
   color: var(--font-color-while);
   font-size: 22px;
+}
+
+
+@media screen and (max-width: 982px) {
+  .group-video {
+    width: 90%;
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 55px;
+  }
+  .video-titel {
+    margin-bottom: 5px;
+  }
+}
+
+@media  screen and  (max-width : 648px) {
+  
+  .group-video {
+    grid-template-columns:  1fr;
+    padding-bottom: 55px;
+  }
+  .icon-item img.circle-imge {
+    width: 70%;
+    height: 70%;
+  }
+ 
+
+  .video-titel {
+    font-size: 20px;
+  }
 }
