--- a/my-app/src/style/App.css
+++ b/my-app/src/style/App.css
@@ -86,20 +86,24 @@ select {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  z-index: 1;
 }
 
 nav {
-  width: unset;
-  height: 120px;
+  width: 100%;
+  min-height: 120px;
   background-color: var(--color-primary-darkdeep);
   border: none;
   display: flex;
   align-items: center;
   padding: 10px 4rem;
+  position: relative;
+  z-index: 0;
 }
 
 .icon-ground {
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   z-index: 1;
@@ -108,11 +112,12 @@ nav {
 
 .icon-item {
   height: 100%;
-  min-width: 33%;
+  
   max-width: 120px;
   position: relative;
   cursor: pointer;
   z-index: 2;
+  display: inline-block;
 }
 
 .icon-item:first-child {
@@ -120,7 +125,7 @@ nav {
 }
 
 .icon-item:before {
-  content: "beer fah fon mai fag dsa das dsadsa  ";
+  content: "beer fah";
   position: absolute;
   opacity: 0.5;
   visibility: hidden;
@@ -277,13 +282,25 @@ nav {
   .group-video {
     grid-template-columns: 1fr;
     padding-bottom: 55px;
+    grid-auto-rows: minmax(24rem, 348px);
   }
   .icon-item img.circle-imge {
     width: 70%;
     height: 70%;
   }
 
+  nav {
+    width: 100%;
+    min-height: 120px;
+    padding: 10px 5px;
+  }
+ 
+
   .video-titel {
     font-size: 20px;
   }
+  
+  
+  
+
 }
