--- a/my-app/src/style/App.css
+++ b/my-app/src/style/App.css
@@ -189,7 +189,7 @@ nav {
 }
 
 .group-video {
-  width: 80%;
+  width: 90%;
   height: 100%;
   margin: 0 auto;
   display: grid;
@@ -217,11 +217,16 @@ nav {
   color: #fff;
 }
 
+.video-card:hover  img {
+  transform: scale(1.1);
+}
+
 .video {
   width: 100%;
   height: 60%;
   background-color: #a5a3a3b0;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .video img {
@@ -229,6 +234,7 @@ nav {
   height: 100%;
   object-fit: cover;
   border-radius: inherit;
+  transition: all 0.25s ease;
 }
 
 .video-titel {
