--- a/my-app/src/style/App.css
+++ b/my-app/src/style/App.css
@@ -57,7 +57,6 @@ select {
   font: inherit;
 }
 
-
 :root {
   --color-primary-darkdeep: #3a3939;
   --color-primary-dark: #313030;
@@ -158,8 +157,8 @@ nav {
 }
 
 .icon-item:hover img.circle-imge {
-  box-shadow: 0px 0px 4px 2px  rgba(144, 255, 114, 0.25),
-  0px 0px 6px 4px rgba(144, 255, 114, 0.35) ;
+  box-shadow: 0px 0px 4px 2px rgba(144, 255, 114, 0.25),
+    0px 0px 6px 4px rgba(144, 255, 114, 0.35);
 }
 
 .icon-item img.circle-imge {
@@ -178,7 +177,7 @@ nav {
 
 .Main {
   width: 100%;
-  height: 100%;
+  height: auto;
   padding-top: 55px;
   padding-bottom: 25px;
 }
@@ -189,8 +188,9 @@ nav {
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(22rem, 348px);
+  grid-auto-rows: minmax(22rem, 500px);
   gap: 30px;
+  overflow-y: visible;
 }
 
 .video-card {
@@ -268,7 +268,15 @@ nav {
   font-size: 22px;
 }
 
-@media only screen and (max-width: 968px) {
+
+@media only screen and (max-width: 1480px) {
+  .group-video {
+    grid-auto-rows: 400px;
+  }
+}
+
+
+@media only screen and (max-width: 1170px) {
   .group-video {
     width: 90%;
     grid-template-columns: 1fr 1fr;
@@ -279,10 +287,10 @@ nav {
   }
 }
 
-@media only screen and (max-width: 648px) {
+@media only screen and (max-width: 748px) {
   .group-video {
     grid-template-columns: 1fr;
-    padding-bottom: 55px;
+    grid-auto-rows: 480px;
   }
 
   nav {
@@ -292,21 +300,18 @@ nav {
   }
 
   .video-titel {
-    font-size: 20px;
+    font-size: 1.4rem;
   }
 
   .icon-item img.circle-imge {
     width: 60%;
     height: 60%;
-  
   }
 }
-
 
 @media only screen and (max-width: 480px) {
   .icon-item img.circle-imge {
     width: 60%;
     height: 55%;
-  
   }
 }
