--- a/my-app/src/style/App.css
+++ b/my-app/src/style/App.css
@@ -195,7 +195,6 @@ nav {
 
 .video-card {
   display: flex;
-  background-color: transparent;
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
@@ -271,14 +270,14 @@ nav {
 
 @media only screen and (max-width: 1480px) {
   .group-video {
-    grid-auto-rows: 400px;
+    grid-auto-rows: 450px;
   }
 }
 
 
 @media only screen and (max-width: 1170px) {
   .group-video {
-    width: 90%;
+    width: 95%;
     grid-template-columns: 1fr 1fr;
     padding-bottom: 55px;
   }
@@ -290,7 +289,8 @@ nav {
 @media only screen and (max-width: 748px) {
   .group-video {
     grid-template-columns: 1fr;
-    grid-auto-rows: 480px;
+    grid-auto-rows: 530px;
+    gap: 50px;
   }
 
   nav {
